--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- Chatbot Button (With Image) -->
         <button id="chatbot-btn" class="chatbot-btn">
-            <img src="robot-chat-.jpg" alt="chatbot icon" class="chatbot-img">
+            <img src="chatbot img.png" alt="chatbot icon" class="chatbot-img">
         </button>
 
         <!-- Chat Panel -->
