--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Chat Panel -->
         <div id="chat-panel" class="chat-panel">
             <div class="chat-header">
-                <span>CampusMate</span>
+                <span>CSConnect</span>
                 <button id="close-btn">&times;</button>
             </div>
             <div id="chat-body" class="chat-body"></div>
