--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="chatbot-container">
         <!-- Chatbot Label (Appears Above Button) -->
-        <div id="chatbot-label" class="chatbot-label">Hi! I'm CampusMate</div>
+        <div id="chatbot-label" class="chatbot-label">Hi! I'm CSconnect</div>
 
         <!-- Chatbot Button (With Image) -->
         <button id="chatbot-btn" class="chatbot-btn">
