--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Chatbot</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
-
 </head>
 <body>
-
     <div class="chatbot-container">
+        <!-- College Heading -->
+        <h2>KTHM College, Nashik</h2>
+        <h3>Department of Computer Science and Applications</h3>
+
         <!-- Chatbot Label (Appears Above Button) -->
         <div id="chatbot-label" class="chatbot-label">Hi! I'm CSconnect</div>
 
