--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 </head>
 <body>
+  <h2>KTHM College, Nashik</h2>
+    <h3>Department of Computer Science and Applications</h3>
+	<h4>Chatbot Project Developer: Ms. Madhuri Ghadge</h4>
+	<h4>Class: M.Sc.(Comp. Sci.)-I</h4>
+	<h4>Email: madhurighadge92@gmail.com</h4>
 
+    
     <div class="chatbot-container">
         <!-- Chatbot Label (Appears Above Button) -->
         <div id="chatbot-label" class="chatbot-label">Hi! I'm CSconnect</div>
