--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<h4>Chatbot Project Developer: Ms. Madhuri Ghadge</h4>
 	<h4>Class: M.Sc.(Comp. Sci.)-I</h4>
 	<h4>Email: madhurighadge92@gmail.com</h4>
+	<h4>Click on Chatbot for any help/querry</h4>
 
     
     <div class="chatbot-container">
