--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 </head>
 <body>
-  <h2>KTHM College, Nashik</h2>
-    <h3>Department of Computer Science and Applications</h3>
-	<h4>Chatbot Project Developer: Ms. Madhuri Ghadge</h4>
-	<h4>Class: M.Sc.(Comp. Sci.)-I</h4>
-	<h4>Email: madhurighadge92@gmail.com</h4>
-	<h4>Click on Chatbot for any help/querry</h4>
+  	<h2 style="color: blue;">KTHM College, Nashik</h2>
+	<h3 style="color: blue;">Department of Computer Science and Applications</h3>
+	<h4 style="color: darkred;">Chatbot Project Developer: Ms. Madhuri Ghadge</h4>
+	<h4 style="color: darkred;">Class: M.Sc.(Comp. Sci.)-I</h4>
+	<h4 style="color: darkred;">Email: madhurighadge92@gmail.com</h4>
+	<h4 style="color: black;">Click on Chatbot for any help/query</h4>
 
     
     <div class="chatbot-container">
