--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class="chatbot-container">
         <!-- Chatbot Label (Appears Above Button) -->
-        <div id="chatbot-label" class="chatbot-label">Hi! I'm CSconnect</div>
+        <div id="chatbot-label" class="chatbot-label">Hi! I'm CSConnect</div>
 
         <!-- Chatbot Button (With Image) -->
         <button id="chatbot-btn" class="chatbot-btn">
